--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <title>Exámen Parcial FrontEnd</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 </head>
 
-<body>
+<body >
     <div class="container" >
         <header>
             <h1>Exámen Parcial 1º FrontEnd</h1>
@@ -17,8 +17,8 @@
         </header>
         <nav>
             <ul>
-                <li>INICIO</li>
-                <li>ACERCA</li>
+                <li><a href="" >INICIO</a></li>
+                <li><a href="" >ACERCA</a></li>
             </ul>
         </nav>
         <section>
@@ -29,6 +29,7 @@
                 </p>
 
             </article>
+            <br>
             <article>
                 <h3>Web Responsive</h3>
                 <p>Se propone abordar el panorama cambiante de dispositivos, navegadores, tamaños de pantalla y orientaciones mediante la creación de sitios web flexibles, fluidos y adaptables. En lugar de responder a las necesidades actuales de una versión web de escritorio adaptada a la resolución de pantalla más común, junto con una versión móvil en particular (a menudo específica para un solo dispositivo móvil), la idea es abordar el problema al revés: use flexibilidad y diseños fluidos que se adaptan a casi cualquier pantalla.
@@ -37,8 +38,9 @@
             </article>
         </section>
         <aside>
-            <a href=""><img src="https://www.freepnglogos.com/uploads/telegram-logo-png-0.png"></a>
-            <a href=""><img src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png"></a>
+            <a href="https://t.me/DerlisGM"><img src="https://www.freepnglogos.com/uploads/telegram-logo-png-0.png" width="100" height="100" ></a>
+            <a href="https://discord.com/channels/@DerlisGM#6770"><img src="https://www.freepnglogos.com/uploads/discord-logo-png/discord-logo-logodownload-download-logotipos-1.png" width="100" height="100" ></a>
+            <a href="https://github.com/DerlisGM"><img src="https://www.freepnglogos.com/uploads/512x512-logo-png/512x512-logo-github-icon-35.png" width="100" height="100" ></a>
 
         </aside>
         <footer>Diseñado por Derlis Sosa <a href="mailto:deersosa5@gmail.com">Correo</a></footer>
